--- a/index.html
+++ b/index.html
@@ -5,11 +5,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wallet App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/f796d1b738.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <header>
+        <h1><i class="fas fa-wallet"></i>Wallet</h1>
+        <p>Your personal finance manager</p>
+    </header>
+
+    <main>
+
+        <section class="transactions">
+
+            <h2 class="title">List of transactions</h2>
+
+            <div class="transaction-list">
+
+                <div class="income-area">
+                    <h3>Income:</h3>
+                    <div class="transaction" id="0">
+                        <p class="transaction-name"><i class="fas fa-money-bill-wave"></i>Salary</p>
+                        <p class="transaction-amount">2000zł <button class="delete"><i
+                                    class="fas fa-times"></i></button></p>
+                    </div>
+                </div>
+
+
+                <div class="expenses-area">
+                    <h3>Expenses:</h3>
+                    <div class="transaction" id="1">
+                        <p class="transaction-name"><i class="fas fa-cart-arrow-down"></i>Shopping</p>
+                        <p class="transaction-amount">-100zł <button class="delete"><i
+                                    class="fas fa-times"></i></button></p>
+                    </div>
+                    <div class="transaction" id="2">
+                        <p class="transaction-name"><i class="fas fa-hamburger"></i>Food</p>
+                        <p class="transaction-amount">-90zł <button class="delete"><i
+                                    class="fas fa-times"></i></button></p>
+                    </div>
+                    <div class="transaction" id="3">
+                        <p class="transaction-name"><i class="fas fa-film"></i>Entertainment</p>
+                        <p class="transaction-amount">-70zł <button class="delete"><i
+                                    class="fas fa-times"></i></button></p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+    </main>
 
     <script src="script.js"></script>
 </body>
