--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
     </header>
 
     <main>
-
         <section class="transactions">
-
             <h2 class="title">List of transactions</h2>
-
             <div class="transaction-list">
-
                 <div class="income-area">
                     <h3>Income:</h3>
                     <div class="transaction" id="0">
@@ -35,8 +31,6 @@
                                     class="fas fa-times"></i></button></p>
                     </div>
                 </div>
-
-
                 <div class="expenses-area">
                     <h3>Expenses:</h3>
                     <div class="transaction" id="1">
@@ -46,18 +40,34 @@
                     </div>
                     <div class="transaction" id="2">
                         <p class="transaction-name"><i class="fas fa-hamburger"></i>Food</p>
-                        <p class="transaction-amount">-90zł <button class="delete"><i
-                                    class="fas fa-times"></i></button></p>
+                        <p class="transaction-amount">-90zł <button class="delete"><i class="fas fa-times"></i></button>
+                        </p>
                     </div>
                     <div class="transaction" id="3">
                         <p class="transaction-name"><i class="fas fa-film"></i>Entertainment</p>
-                        <p class="transaction-amount">-70zł <button class="delete"><i
-                                    class="fas fa-times"></i></button></p>
+                        <p class="transaction-amount">-70zł <button class="delete"><i class="fas fa-times"></i></button>
+                        </p>
                     </div>
                 </div>
-
             </div>
+        </section>
 
+        <section class="options">
+            <div>
+                <h2 class="title">Funds available:</h2>
+                <p class="available money">0 zł</p>
+            </div>
+            <div class="controls">
+                <button class="add-transaction"><i class="fas fa-plus"></i>Add transaction</button>
+                <button class="delete-all"><i class="far fa-trash-alt"></i>Remove transaction</button>
+            </div>
+            <div class="style-selection">
+                <h2 class="title">Choose style:</h2>
+                <div class="color buttons">
+                    <button class="light"></button>
+                    <button class="dark"></button>
+                </div>
+            </div>
         </section>
 
     </main>
