options section styled

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section class="options">
             <div>
                 <h2 class="title">Funds available:</h2>
-                <p class="available money">0 zł</p>
+                <p class="available-money">0 zł</p>
             </div>
             <div class="controls">
                 <button class="add-transaction"><i class="fas fa-plus"></i>Add transaction</button>
@@ -63,14 +63,14 @@
             </div>
             <div class="style-selection">
                 <h2 class="title">Choose style:</h2>
-                <div class="color buttons">
+                <div class="color-buttons">
                     <button class="light"></button>
                     <button class="dark"></button>
                 </div>
             </div>
         </section>
     </main>
-    
+
     <div class="add-transaction-panel">
 
         <h2 class="title">Add a new transaction</h2>
