JS - following functions added: show panel, close panel, check form, clear inputs

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <label for="category">Choose category</label>
         <small>( [ + ] means income, [ - ] means expense)</small>
-        <select name="" id="">
+        <select name="" id="category">
             <option value="none"></option>
             <option value="income">[ + ] Income</option>
             <option value="shopping">[ - ] Shopping</option>
