JS function adding a new category and selecting the correct icon now in place. Function to determine if it's income or expense yet to be done

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
                     <h3>Income:</h3>
                     <div class="transaction" id="0">
                         <p class="transaction-name"><i class="fas fa-money-bill-wave"></i>Salary</p>
-                        <p class="transaction-amount">2000zł <button class="delete"><i
-                                    class="fas fa-times"></i></button></p>
+                        <p class="transaction-amount">2000zł <button class="delete"><i class="fas fa-times"></i></button></p>
                     </div>
                 </div>
                 <div class="expenses-area">
@@ -87,7 +86,7 @@
         <label for="category">Choose category</label>
         <small>( [ + ] means income, [ - ] means expense)</small>
         <select name="" id="category">
-            <option value="none"></option>
+            <option value="none" disabled selected></option>
             <option value="income">[ + ] Income</option>
             <option value="shopping">[ - ] Shopping</option>
             <option value="food">[ - ] Food</option>
