--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
             <div class="transaction-list">
                 <div class="income-area">
                     <h3>Income:</h3>
-                    <div class="transaction" id="0">
+                    <!-- <div class="transaction" id="0">
                         <p class="transaction-name"><i class="fas fa-money-bill-wave"></i>Salary</p>
                         <p class="transaction-amount">2000zł <button class="delete"><i class="fas fa-times"></i></button></p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="expenses-area">
                     <h3>Expenses:</h3>
-                    <div class="transaction" id="1">
+                    <!-- <div class="transaction" id="1">
                         <p class="transaction-name"><i class="fas fa-cart-arrow-down"></i>Shopping</p>
                         <p class="transaction-amount">-100zł <button class="delete"><i
                                     class="fas fa-times"></i></button></p>
@@ -46,7 +46,7 @@
                         <p class="transaction-name"><i class="fas fa-film"></i>Entertainment</p>
                         <p class="transaction-amount">-70zł <button class="delete"><i class="fas fa-times"></i></button>
                         </p>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
