JS: remove all transaction functionality now in place

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="controls">
                 <button class="add-transaction"><i class="fas fa-plus"></i>Add transaction</button>
-                <button class="delete-all"><i class="far fa-trash-alt"></i>Remove transaction</button>
+                <button class="delete-all"><i class="far fa-trash-alt"></i>Remove all transaction</button>
             </div>
             <div class="style-selection">
                 <h2 class="title">Choose style:</h2>
